5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1592_1801.log
== TEST (2019-03-29 22:56:01) 
-- CODE:
nome_do_objeto = input("Abra + ")
feitico = 4 * nome_do_objeto
print(feitico)


-- OUTPUT:
livrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:56:18) 
-- CODE:
nome_do_objeto = input("Abra + ")
feitico = 4 * nome_do_objeto
print(feitico)


-- EXECUTION TIME:
0.184168
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carrocarrocarrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixacaixacaixacaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:01:31) 
-- CODE:
nome_do_objeto =  input("Abra + ")
numerodevezes = int(input(""))
feitico = nome_do_objeto + numerodevezes
print (feitico)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = nome_do_objeto + numerodevezes
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:01:44) 
-- CODE:
nome_do_objeto =  input("Abra + ")
numerodevezes = int(input(""))
feitico = nome_do_objeto * numerodevezes
print (feitico)



-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 23:02:05) 
-- CODE:
nome_do_objeto =  input("Abra + ")
numerodevezes = int(input(""))
feitico = nome_do_objeto * numerodevezes
print (feitico)



-- EXECUTION TIME:
0.136475
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:02:10) 
-- CODE:
nome_do_objeto =  input("Abra + ")
numerodevezes = int(input(""))
feitico = nome_do_objeto * numerodevezes
print (feitico)



-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:02:18) 
-- CODE:
nome_do_objeto =  input(" + ")
numerodevezes = int(input(""))
feitico = nome_do_objeto * numerodevezes
print (feitico)



-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:02:26) 
-- CODE:
nome_do_objeto =  input("  ")
numerodevezes = int(input(""))
feitico = nome_do_objeto * numerodevezes
print (feitico)



-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:02:38) 
-- CODE:
nome_do_objeto =  input(" Abra +  ")
numerodevezes = int(input(""))
feitico = nome_do_objeto * numerodevezes
print (feitico)



-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:02:59) 
-- CODE:
nome_do_objeto =  input("   ")
numerodevezes = int(input(""))
feitico = nome_do_objeto * numerodevezes
print (feitico)



-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 23:03:16) 
-- CODE:
nome_do_objeto =  input("   ")
numerodevezes = int(input(""))
feitico = nome_do_objeto * numerodevezes
print (feitico)



-- EXECUTION TIME:
0.259372
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:03:17) 
-- CODE:
nome_do_objeto =  input("   ")
numerodevezes = int(input(""))
feitico = nome_do_objeto * numerodevezes
print (feitico)



-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:03:38) 
-- CODE:
abra + nome_do_objeto =  input("   ")
numerodevezes = int(input(""))
feitico = nome_do_objeto * numerodevezes
print (feitico)



-- ERROR:
File "XXXX", line 1
    abra + nome_do_objeto =  input()
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:03:59) 
-- CODE:
nome_do_objeto =  input("Abra +   ")
numerodevezes = int(input(" "))
feitico = nome_do_objeto * numerodevezes
print (feitico)



-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:21:46) 
-- CODE:
nome_do_objeto =  input(" ")
numerodevezes = int(input(" "))
feitico = nome_do_objeto * numerodevezes
print (feitico)



-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:21:54) 
-- CODE:
nome_do_objeto =  input("Abra +  ")
numerodevezes = int(input(" "))
feitico = nome_do_objeto * numerodevezes
print (feitico)



-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:22:04) 
-- CODE:
nome_do_objeto =  input("Abra +  ")
numerodevezes = int(input(" "))
feitico = nome_do_objeto * numerodevezes
print (feitico)



-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:22:15) 
-- CODE:
nome_do_objeto =  input("Abra + ")
numerodevezes = int(input(" "))
feitico = nome_do_objeto * numerodevezes
print (feitico)



-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:22:29) 
-- CODE:
nome_do_objeto =  input("abra + ")
numerodevezes = int(input(" "))
feitico = nome_do_objeto * numerodevezes
print (feitico)



-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:24:48) 
-- CODE:
texto = input("Abra")
nome_do_objeto = input("")
numerodevezes = int(input(" "))
feitico = texto + nome_do_objeto * numerodevezes
print (feitico)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    numerodevezes = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:25:07) 
-- CODE:
texto = input("Abra")
nome_do_objeto = input("")
numerodevezes = int(input(" "))
feitico = texto + nome_do_objeto * numerodevezes
print (feitico)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    numerodevezes = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:25:42) 
-- CODE:
texto = input("Abra +")
nome_do_objeto = input("")
numerodevezes = int(input(" "))
feitico = texto + nome_do_objeto * numerodevezes
print (feitico)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    numerodevezes = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:27:53) 
-- CODE:
nome_do_objetotexto = input(" ")
texto = input("Abra")
numerodevezes = int(input(" "))
feitico = texto + nome_do_objeto * numerodevezes
print (feitico)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    numerodevezes = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:28:19) 
-- CODE:
nome_do_objeto = input(" ")
texto = input("Abra")
numerodevezes = int(input(" "))
feitico = texto + nome_do_objeto * numerodevezes
print (feitico)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    numerodevezes = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:28:41) 
-- CODE:
nome_do_objeto = input(" ")
texto = input("Abra")
print(texto)
numerodevezes = int(input(" "))
feitico = texto + nome_do_objeto * numerodevezes
print (feitico)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    numerodevezes = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:28:46) 
-- CODE:
nome_do_objeto = input(" ")
texto = input("Abra")
print(texto)
numerodevezes = int(input(" "))
feitico = texto + nome_do_objeto * numerodevezes
print (feitico)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    numerodevezes = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:30:39) 
-- CODE:
nome_do_objeto = input("Abra + ")
numero_de_repeticoes = input(" ")

feitico = nome_do_objeto * numero_de_repeticoes
print(feitico)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    feitico = nome_do_objeto * numero_de_repeticoes
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:31:07) 
-- CODE:
nome_do_objeto = input("Abra + ")
numero_de_repeticoes = input(" ")
feitico = nome_do_objeto * numero_de_repeticoes
print(feitico)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = nome_do_objeto * numero_de_repeticoes
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:31:36) 
-- CODE:
nome_do_objeto = input("Abra + ")
numero_de_repeticoes = int(input(" "))
feitico = nome_do_objeto * numero_de_repeticoes
print(feitico)


-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:31:57) 
-- CODE:
nome_do_objeto = input(" + ")
numero_de_repeticoes = int(input(" "))
feitico = nome_do_objeto * numero_de_repeticoes
print(feitico)


-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:33:22) 
-- CODE:
nome_do_objeto = input("Abra +  ")
print(nome_do_objeto)
numero_de_repeticoes = int(input(" "))
feitico = nome_do_objeto * numero_de_repeticoes
print(feitico)


-- OUTPUT:
livro
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:34:17) 
-- CODE:
var1 = int("Abra ")
nome_do_objeto = input("  ")
print(var1 + nome_do_objeto)
numero_de_repeticoes = int(input(" "))
feitico = nome_do_objeto * numero_de_repeticoes
print(feitico)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1 = int("Abra ")
ValueError: invalid literal for int() with base 10: 'Abra '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:34:28) 
-- CODE:
var1 = input(" Abra ")
nome_do_objeto = input("  ")
print(var1 + nome_do_objeto)
numero_de_repeticoes = int(input(" "))
feitico = nome_do_objeto * numero_de_repeticoes
print(feitico)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    numero_de_repeticoes = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:34:39) 
-- CODE:
var1 = input(" Abra ")
nome_do_objeto = input("  ")
print(var1 + nome_do_objeto)
numero_de_repeticoes = int(input(" "))
feitico = nome_do_objeto * numero_de_repeticoes
print(feitico)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    numero_de_repeticoes = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:35:46) 
-- CODE:
nome_do_objeto = input("  ")
print(var1 + nome_do_objeto)
numero_de_repeticoes = int(input(" "))
feitico = nome_do_objeto * numero_de_repeticoes
print(feitico)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(var1 + nome_do_objeto)
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:35:58) 
-- CODE:
nome_do_objeto = input("  ")
numero_de_repeticoes = int(input(" "))
feitico = nome_do_objeto * numero_de_repeticoes
print(feitico)


-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:36:06) 
-- CODE:
nome_do_objeto = input("  ")
numero_de_repeticoes = int(input(" "))
feitico = nome_do_objeto * numero_de_repeticoes
print(feitico)


-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 23:36:17) 
-- CODE:
nome_do_objeto = input("  ")
numero_de_repeticoes = int(input(" "))
feitico = nome_do_objeto * numero_de_repeticoes
print(feitico)


-- EXECUTION TIME:
0.187706
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:36:19) 
-- CODE:
nome_do_objeto = input("  ")
numero_de_repeticoes = int(input(" "))
feitico = nome_do_objeto * numero_de_repeticoes
print(feitico)


-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:37:24) 
-- CODE:
Abra + nome_do_objeto = input("  ")
numero_de_repeticoes = int(input(" "))
feitico = nome_do_objeto * numero_de_repeticoes
print(feitico)


-- ERROR:
File "XXXX", line 1
    Abra + nome_do_objeto = input()
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:38:53) 
-- CODE:
nome_do_objeto = input(" ")
numero_de_repeticoes = int(input(" "))
feitico = input(" Abra + nome_do_objeto")
feitico = nome_do_objeto + numero_de_repeticoes
print(feitico)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:39:48) 
-- CODE:
nome_do_objeto = input(" ")
numero_de_repeticoes = int(input(" "))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:40:32) 
-- CODE:
nome_do_objeto = input(" ")
numero_de_repeticoes = int(input(" "))

feitico = abra + nome_do_objeto * numero_de_repeticoes
print(feitico)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    feitico = abra + nome_do_objeto * numero_de_repeticoes
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:40:50) 
-- CODE:
nome_do_objeto = input(" ")
numero_de_repeticoes = int(input(" "))
var1 = abra

feitico = abra + nome_do_objeto * numero_de_repeticoes
print(feitico)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var1 = abra
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:41:10) 
-- CODE:
nome_do_objeto = input(" ")
numero_de_repeticoes = int(input(" "))
var1 = input(" abra ")

feitico = abra + nome_do_objeto * numero_de_repeticoes
print(feitico)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var1 = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:41:26) 
-- CODE:
nome_do_objeto = input(" ")
numero_de_repeticoes = int(input(" "))
var1 = input(" abra ")

feitico = var1 + nome_do_objeto * numero_de_repeticoes
print(feitico)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var1 = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:49:28) 
-- CODE:
nome_do_objeto = input(" ")
numero_de_repeticoes = int(input(" "))
var1 = input(" abra ")

feitico = var1 + nome_do_objeto * numero_de_repeticoes
print(feitico)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var1 = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:50:25) 
-- CODE:
nome_do_objeto = input(" ")
numero_de_repeticoes = int(input(" "))
var1 = input(" abra ")

feitico = var1 + nome_do_objeto * numero_de_repeticoes
print(feitico)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var1 = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:51:58) 
-- CODE:
nome_do_objeto = input(" ")
numero_de_repeticoes = int(input(" "))
var1 = input(" abra ")

feitico = var1 + nome_do_objeto * numero_de_repeticoes
print(feitico)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var1 = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:52:12) 
-- CODE:
nome_do_objeto = input("Nome do objeto:")
numero_de_repeticoes = int(input(" "))
var1 = input(" abra ")

feitico = var1 + nome_do_objeto * numero_de_repeticoes
print(feitico)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var1 = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:52:40) 
-- CODE:
nome_do_objeto = input("Nome do objeto:")
numero_de_repeticoes = int(input(" "))
var1 = input(" abra ")

feitico = var1 + nome_do_objeto * numero_de_repeticoes
print(feitico)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var1 = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
